# uv-dynamic-versioning-fallback-test

./: README.md  pyproject.toml
.github/: dependabot.yml
