[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning @ git+https://github.com/eggplants/uv-dynamic-versioning.git@patch-1" ]

[project]
name = "uv-dynamic-versioning-fallback-test"
description = "this is test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "1.2.3"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["src"]
